fix(ui): White space padding from `SectionTabs` on legacy layout & Better use of Label

--- a/packages/ui/src/components/Typography/Label.css
+++ b/packages/ui/src/components/Typography/Label.css
@@ -9,7 +9,6 @@
 	border: none;
 	border-radius: var(--cui-gap);
 	color: inherit;
-	display: inline-flex;
 	gap: var(--cui-gap);
 	font-family: inherit;
 	font-size: var(--cui-font-size--label);
